Upload files now works